--- a/webapp/home/templates/home/subdomains/components/accordion.html
+++ b/webapp/home/templates/home/subdomains/components/accordion.html
@@ -51,7 +51,7 @@
           <div class="col col-auto">
             <a
               href="{{ item.button_link }}"
-              class="btn btn-galaxy"
+              class="btn btn-galaxy{% if 'https://training.galaxyproject' in item.button_link %} gtn-modal{% endif%}"
               title="{{ item.button_tip|default:'Run tool' }}"
               data-bs-toggle="tooltip"
               data-bs-placement="bottom"
