Labs auto-fetch and render CONTRIBUTORS file

--- a/webapp/home/templates/home/subdomains/exported.html
+++ b/webapp/home/templates/home/subdomains/exported.html
@@ -57,6 +57,10 @@
   {{ snippets.conclusion_md|markdown }}
   {% endif %}
 
+  {% if contributors %}
+  {% include 'home/subdomains/components/contributors.html' %}
+  {% endif %}
+
 </main>
 
 
