--- a/webapp/home/static/home/css/subdomains/main.css
+++ b/webapp/home/static/home/css/subdomains/main.css
@@ -46,6 +46,7 @@ code {
 .contributor .wrapper {
   display: inline-block;
   width: 35px;
+  min-height: 35px;
   margin: 2px 0;
   text-align: center;
 }
