--- a/webapp/home/templates/home/header-export.html
+++ b/webapp/home/templates/home/header-export.html
@@ -7,6 +7,7 @@
     {% include 'home/snippets/head.html' %}
     <title> {% if title %}{{ title }}{% else %}Galaxy - data analysis for everyone{% endif %} </title>
     {% include 'home/snippets/imports.html' %}
+    {% include 'home/snippets/posthog.html' %}
 
     {% block head %}
     {% endblock %}
