Labs feedback form

--- a/webapp/home/templates/home/subdomains/exported.html
+++ b/webapp/home/templates/home/subdomains/exported.html
@@ -64,6 +64,11 @@
 </main>
 
 
+{% if feedback_email %}
+{% include 'home/subdomains/components/feedback-modal.html' %}
+{% endif %}
+
+
 {% if snippets.footer_md %}
 {{ snippets.footer_md|markdown }}
 {% endif %}
