--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -178,7 +178,7 @@
         }
       }
 
-      const isLabPage = () => window.location.pathname.includes('/landing/');
+      const isLabPage = () => window.location.pathname.includes('/lab/');
 
       $(document).ready( () => {
         // Restyle navbar if not embedded in iframe
@@ -201,17 +201,21 @@
         // Remove links to usegalaxy.org.au if in iframe
         // ...otherwise risk having galaxy-in-galaxy which is very weird!
         if ( inIframe() ) {
-          const links = document.getElementsByTagName('a');
-          for (var i in links) {
+          $('a').each( (i, el) => {
             if (
-              links[i].href
-              && links[i].href == ('https://usegalaxy.org.au')
+              el.href
+              && el.href.includes('https://{{ HOSTNAME }}')
               && !isLabPage()
             ) {
-              console.log(`Remove href from anchor: ${links[i].href}`);
-              $(links[i]).removeAttr("href");
+              if (el.href.replace(/\/$/, "") === 'https://{{ HOSTNAME }}') {
+                console.log(`Remove href from anchor: ${el.href}`);
+                $(el).removeAttr("href");
+              } else {
+                console.log(`Set target="_blank" on anchor: ${el.href}`);
+                $(el).attr("target", "_blank");
+              }
             }
-          };
+          });
         }
 
         {% block onload %}
