Fix static file entry

--- a/webapp/home/templates/home/subdomains/components/feedback-modal.html
+++ b/webapp/home/templates/home/subdomains/components/feedback-modal.html
@@ -41,7 +41,7 @@
           </div>
 
           <div class="loading m-5 text-center" style="display: none;">
-            <img src="{% static '/home/img/spinner.svg' %}" alt="Loading animation" width="150px">
+            <img src="{% static 'home/img/spinner.svg' %}" alt="Loading animation" width="150px">
           </div>
         </div>
         <div class="modal-footer">
