--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -44,7 +44,7 @@
   <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
   ) operates Galaxy Australia in collaboration with
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
-  <a href="https://www.melbournebioinformatics.org.au/" target="_blank">Melbourne Bioinformatics</a>
+  <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
   and
   <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.
   The service is underpinned by computational resources provided by
