--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -40,7 +40,7 @@
 </h3>
 
 <p>
-  The Australian BioCommons (hosted by
+Australian BioCommons (hosted by
   <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
 ) operates Galaxy Australia in collaboration with
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
