--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -41,8 +41,8 @@
 
 <p>
 Australian BioCommons (hosted by
-  <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
-) operates Galaxy Australia in collaboration with
+  <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>)
+  operates Galaxy Australia in collaboration with
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
   <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
   and
