--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -1,6 +1,14 @@
 {% load static %}
 
 <footer>
+  {% if crop_margin %}
+  <style>
+    footer {
+      margin-top: 0;
+    }
+  </style>
+  {% endif %}
+
   <div class="container logo">
     <div class="text-center">
       <a href="https://www.biocommons.org.au" target="_blank">
