--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -9,6 +9,10 @@
   <a href="/request">Please just ask!</a>
 </p>
 
+<p>
+  Galaxy Australia is part of the usegalaxy.* initiative. Visit the <a href="https://galaxyproject.org/usegalaxy/">Galaxy Project Community Hub for more information.</a>
+</p>
+
 <hr>
 
 <h3 id="acknowledgement-statement">
@@ -36,43 +40,48 @@
 <hr>
 
 <h3 id="operational-partners">
-  Galaxy Australia Operational Partners
+  Operational Partners
 </h3>
 
 <p>
 Australian BioCommons (hosted by
-  <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>)
+  <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>)
   operates Galaxy Australia in collaboration with
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
   <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
   and
   <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.
-  The service is underpinned by computational resources provided by
-  <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>,
+</p>
+
+<hr>
+
+<h3 id="computational-partners">
+  Computational Partners
+</h3>
+
+<p>
+Galaxy Australia is underpined by computational resources provided by
+  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>,
+  <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>,
+  <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
   <a href="https://pawsey.org.au/" target="_blank">Pawsey Supercomputing Research Centre</a>,
   <a href="https://nci.org.au/" target="_blank">National Computational Infrastructure</a>,
-  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>,
-  <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>,
   and
   <a href="https://azure.microsoft.com/" target="_blank">Microsoft Azure</a>.
 </p>
 
 <hr>
 
-<h3 id="usegalaxy">
-  The usegalaxy.* initiative
+<h3 id="funding">
+  Funding
 </h3>
 
 <p>
-  <strong>Galaxy Australia</strong> is one of the large Galaxy servers that make up the <strong>usegalaxy.*</strong> initiative. Along with <strong>Galaxy Europe</strong> (<a href="https://usegalaxy.eu" target="_blank">usegalaxy.eu</a>) and <strong>Galaxy Main</strong> in the USA (<a href="https://usegalaxy.org" target="_blank">usegalaxy.org</a>), the <strong>usegalaxy.*</strong> servers aim to provide a global publicly available bioinformatics resource, present a similar look and feel, similar installed tool sets and reference data and indices.
-</p>
-
-<p>
-  We do this via a network of globally distributed
-  <a href="https://galaxyproject.org/admin/reference-data-repo/" target="_blank">data servers</a>
+Galaxy Australia is supported by funding from
+  <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>
   and
-  <a href="https://github.com/usegalaxy-au" target="_blank">open-source code</a>.
-  For more information on <strong>usegalaxy.*</strong> see the
-  <a href="https://galaxyproject.org/usegalaxy/" target="_blank">Galaxy Project Community Hub</a>
+  <a href="https://bioplatforms.com/" target="_blank">Bioplatforms Australia</a>.
+  Bioplatforms are enabled by
+  <a href="https://www.education.gov.au/ncris" target="_blank">NCRIS</a>.
 </p>
