--- a/webapp/home/templates/home/snippets/about/terms-of-service.html
+++ b/webapp/home/templates/home/snippets/about/terms-of-service.html
@@ -5,7 +5,7 @@
   <a href="https://biotools.readthedocs.io/en/latest/curators_guide.html#workbench" target="_blank">
     workbench
   </a>
-  for manipulating, analysing and interpreting life science data. The service is offered by the
+  for manipulating, analysing and interpreting life science data. The service is offered by
   <a href="https://www.biocommons.org.au/" target="_blank">
     Australian BioCommons
   </a>
@@ -114,7 +114,7 @@
 
     <ol>
       <li>
-        The Australian BioCommons reserves the right, without notice, at its sole discretion and without liability,
+        Australian BioCommons reserves the right, without notice, at its sole discretion and without liability,
         <ol>
           <li>
             to alter, delete or block access to content that it deems to be inappropriate, and
@@ -135,7 +135,7 @@
 
     <ol>
       <li>
-        These Terms of Use are subject to change by the Australian BioCommons at any time and without notice, other than through posting the updated Terms of Use on the
+        These Terms of Use are subject to change by Australian BioCommons at any time and without notice, other than through posting the updated Terms of Use on the
         <a href="https://usegalaxy.org.au/" target="_blank">https://usegalaxy.org.au/</a>
         website and communicating the update to registered account holders.
       </li>
