Update about.html add logos

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -52,6 +52,19 @@ Australian BioCommons (hosted by
   and
   <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.
 </p>
+<div class="container logo">
+    <div class="text-center">
+      <a href="https://www.unimelb.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
+      </a>
+      <a href="https://www.qcif.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/qcif-2.png' %}" />
+      </a>
+      <a href="https://www.aarnet.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/aarnet.png' %}" />
+      </a>
+    </div>
+</div>
 
 <hr>
 
@@ -70,6 +83,31 @@ Galaxy Australia is underpined by computational resources provided by
   and
   <a href="https://azure.microsoft.com/" target="_blank">Microsoft Azure</a>.
 </p>
+<div class="container logo">
+ <div class="text-center">
+   <a href="https://www.aarnet.edu.au" target="_blank">
+      <img src="{% static 'logos/footer/aarnet.png' %}" />
+   </a> 
+   <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">
+      <img src="{% static 'logos/footer/ARDC_Nectar_Research_Cloud_RGB.png' %}" />
+   </a>
+   <a href="https://www.unimelb.edu.au" target="_blank">
+      <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
+  </a>
+  <a href="https://www.qcif.edu.au" target="_blank">
+      <img src="{% static 'logos/footer/qcif-2.png' %}" />
+  </a>
+    <a href="https://nci.org.au" target="_blank">
+        <img src="{% static 'logos/footer/nci_logo.png' %}" />
+    </a>
+    <a href="https://pawsey.org.au" target="_blank">
+        <img src="{% static 'logos/footer/pawsey-grayscalelogo-beige.png' %}" />
+    </a>
+     <a href="https://azure.microsoft.com/en-au" target="_blank">
+        <img src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
+      </a>
+    </div>
+  </div>
 
 <hr>
 
@@ -85,3 +123,16 @@ Galaxy Australia is supported by funding from
   Bioplatforms are enabled by
   <a href="https://www.education.gov.au/ncris" target="_blank">NCRIS</a>.
 </p>
+<div class="container logo">
+ <div class="text-center">
+   <a href="https://www.unimelb.edu.au" target="_blank">
+      <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
+  </a>
+  <a href="https://bioplatforms.com/" target="_blank">
+      <img src="{% static 'BIO-RGB_Full-POS.png' %}" />
+  </a>
+  <a href="https://www.education.gov.au/ncris" target="_blank">
+      <img src="{% static 'logos/footer/NCRIS-PROVIDER.png' %}" />
+  </a>
+ </div>
+</div>
