--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -11,50 +11,14 @@
 
   <div class="container logo">
     <div class="text-center">
-      <a href="https://www.biocommons.org.au" target="_blank">
-        <img src="{% static 'logos/footer/au-biocommons-2.png' %}" />
+      <a href="https://www.education.gov.au/ncris" target="_blank">
+        <img src="{% static 'logos/footer/NCRIS-PROVIDER.png' %}" />
       </a>
-
-      <a href="https://www.qcif.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/qcif-2.png' %}" />
+      <a href="https://bioplatforms.com/" target="_blank">
+        <img src="{% static 'BIO-RGB_Full-POS.png' %}" />
       </a>
-
-      <a href="https://www.unimelb.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
-      </a>
-
-      <a href="https://www.aarnet.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/aarnet.png' %}" />
-      </a>
-    </div>
-
-    <div class="text-center second">
-      <a href="https://www.uq.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/uq-grayscale.png' %}" />
-      </a>
-
-      <a href="https://ardc.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/ardc-grayscale.png' %}" />
-      </a>
-
-      <a href="https://bioplatforms.com" target="_blank">
-        <img src="{% static 'logos/footer/bpa-grayscale.png' %}" />
-      </a>
-
-      <a href="https://nci.org.au" target="_blank">
-        <img src="{% static 'logos/footer/nci-grayscale.png' %}" />
-      </a>
-
-      <a href="https://pawsey.org.au" target="_blank">
-        <img src="{% static 'logos/footer/pawsey-grayscale.png' %}" />
-      </a>
-
-      <a href="https://www.dese.gov.au/ncris" target="_blank">
-        <img src="{% static 'logos/footer/ncris-grayscale.png' %}" />
-      </a>
-
-      <a href="https://www.qld.gov.au" target="_blank">
-        <img src="{% static 'logos/footer/qld-gov.png' %}" />
+      <a href="https://www.biocommons.org.au/" target="_blank">
+        <img src="{% static 'Australian-Biocommons-Logo-Tagline-Infrastructure-RGB-no-padding.png' %}" />
       </a>
     </div>
   </div>
@@ -78,14 +42,15 @@
           <div class="col-md-6">
             <small>
               <a href="/request">Support</a> <br>
+              <a href="/about">About</a>a> <br>
               <a href="/about#acknowledgement-statement">Acknowledging Galaxy Australia</a> <br>
-              <a href="/about#feature-catalogue">Feature catalogue</a> <br>
-              <a href="/about#terms-of-service">Terms and conditions</a>
+              <a href="/about#feature-catalogue">Feature catalogue</a>
             </small>
           </div>
 
           <div class="col-md-6">
             <small>
+              <a href="/about#terms-of-service">Terms and conditions</a> <br>
               <a href="/about#data-privacy">Privacy and data collection</a> <br>
               <a href="/about#acceptable-use">Acceptable use</a> <br>
               <a href="/about#service-levels">Service levels</a>
@@ -100,6 +65,7 @@
             <h6>ACKNOWLEDGEMENTS</h6>
             <p class="tight">
               <small>
+                Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations </a>. <br>
                 We acknowledge and pay respect to the Elders and Traditional Owners
                 of the lands on which our partner organisations stand.
               </small>
@@ -119,6 +85,8 @@
 
               <a href="https://twitter.com/galaxyaustralia" target="_blank">
                 <i class="fab fa-twitter"></i>
+              <a href="https://www.linkedin.com/products/australianbiocommons-galaxyaustralia/" target="_blank">
+                <i class="fab fa-linkedin"></i>
               </a>
             </p>
           </div>
