Image filename typos

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -12,7 +12,9 @@
 </p>
 
 <p>
-  Galaxy Australia is part of the usegalaxy.* initiative. Visit the <a href="https://galaxyproject.org/usegalaxy/">Galaxy Project Community Hub for more information.</a>
+  Galaxy Australia is part of the usegalaxy.* initiative. Visit the
+  <a href="https://galaxyproject.org/usegalaxy/" target="_blank">Galaxy Project Community Hub</a>
+  for more information.
 </p>
 
 <hr>
@@ -100,10 +102,10 @@ Galaxy Australia is underpined by computational resources provided by
       <img src="{% static 'logos/footer/qcif-2.png' %}" />
   </a>
     <a href="https://nci.org.au" target="_blank">
-        <img src="{% static 'logos/footer/nci_logo.png' %}" />
+        <img src="{% static 'logos/footer/NCI_logo.png' %}" />
     </a>
     <a href="https://pawsey.org.au" target="_blank">
-        <img src="{% static 'logos/footer/pawsey-grayscalelogo-beige.png' %}" />
+        <img src="{% static 'logos/footer/pawsey-logo-beige.png' %}" />
     </a>
      <a href="https://azure.microsoft.com/en-au" target="_blank">
         <img src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
@@ -131,7 +133,7 @@ Galaxy Australia is supported by funding from
       <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
   </a>
   <a href="https://bioplatforms.com/" target="_blank">
-      <img src="{% static 'BIO-RGB_Full-POS.png' %}" />
+      <img src="{% static 'logos/footer/BIO-RGB_Full-POS.png' %}" />
   </a>
   <a href="https://www.education.gov.au/ncris" target="_blank">
       <img src="{% static 'logos/footer/NCRIS-PROVIDER.png' %}" />
