--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -42,7 +42,7 @@
           <div class="col-md-6">
             <small>
               <a href="/request">Support</a> <br>
-              <a href="/about">About</a>a> <br>
+              <a href="/about">About</a><br>
               <a href="/about#acknowledgement-statement">Acknowledging Galaxy Australia</a> <br>
               <a href="/about#feature-catalogue">Feature catalogue</a>
             </small>
@@ -65,7 +65,7 @@
             <h6>ACKNOWLEDGEMENTS</h6>
             <p class="tight">
               <small>
-                Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations </a>. <br>
+                Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations</a>. <br>
                 We acknowledge and pay respect to the Elders and Traditional Owners
                 of the lands on which our partner organisations stand.
               </small>
