move infrastructure message

--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -18,7 +18,7 @@
         <img src="{% static 'logos/footer/BIO-RGB_Full-POS.png' %}" />
       </a>
       <a href="https://www.biocommons.org.au/" target="_blank">
-        <img src="{% static 'logos/footer/Australian-Biocommons-Logo-Tagline-Infrastructure-RGB-no-padding.png' %}" />
+        <img src="{% static 'logos/footer/au-biocommons.png' %}" />
       </a>
     </div>
   </div>
@@ -62,12 +62,11 @@
       <div class="col-6">
         <div class="row">
           <div class="col-md-6">
-            <h6>ACKNOWLEDGEMENTS</h6>
             <p class="tight">
               <small>
-                Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations</a>. <br>
-                We acknowledge and pay respect to the Elders and Traditional Owners
-                of the lands on which our partner organisations stand.
+                This service forms part of the national Australian BioCommons infrastructure. <br>
+                Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations</a>.<br>
+                We acknowledge and pay respect to the Elders and Traditional Owners of the lands on which our partner organisations stand.
               </small>
             </p>
           </div>
