--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -54,10 +54,14 @@ Australian BioCommons (hosted by
   <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
   <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
   and
-  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.
+  <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.<br>
+  This service forms part of the national Australian BioCommons infrastructure.
 </p>
 <div class="container logo">
     <div class="text-center">
+      <a href="https://www.biocommons.org.au" target="_blank">
+        <img src="{% static 'logos/footer/au-biocommons' %}" />
+      </a>
       <a href="https://www.unimelb.edu.au" target="_blank">
         <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
       </a>
