--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -62,13 +62,12 @@
       <div class="col-6">
         <div class="row">
           <div class="col-md-6">
+            <h6>ACKNOWLEDGEMENTS</h6>
             <p class="tight">
               <small>
-                This service forms part of the national Australian BioCommons infrastructure. <br>
-                <br>
-                Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations</a>.<br>
-                <br>
-                We acknowledge and pay respect to the Elders and Traditional Owners of the lands on which our partner organisations stand.
+                <p>This service forms part of the national Australian BioCommons infrastructure.</p>
+                <p>Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations</a>.</p>
+                <p>We acknowledge and pay respect to the Elders and Traditional Owners of the lands on which our partner organisations stand.</p>
               </small>
             </p>
           </div>
