--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -27,7 +27,7 @@
   <div class="container links">
     <hr>
     <div class="row" id="footer-links-row">
-      <div class="col" id="footer-galaxy-logo">
+      <div class="col-md-auto" id="footer-galaxy-logo">
         <a href="/">
           <img
           src="{% static 'favicon/android-chrome-192x192.png' %}"
@@ -36,7 +36,7 @@
         </a>
       </div>
 
-      <div class="col-6">
+      <div class="col-md-auto">
         <h6>SITE LINKS</h6>
         <div class="row" id="footer-site-links">
           <div class="col-md-6">
@@ -59,39 +59,39 @@
         </div>
       </div>
 
-      <div class="col-6">
-        <div class="row">
-          <div class="col-md-6">
-            <p class="tight">
-              <small>
-                This service forms part of the national Australian BioCommons infrastructure. <br>
-                <br>
-                Galaxy Australia acknowledges operational and computational  support from its <a href="/about#operational-partners"> partner organisations</a>.<br>
-                <br>
-                We acknowledge and pay respect to the Elders and Traditional Owners of the lands on which our partner organisations stand.
-              </small>
-            </p>
-          </div>
+      <div class="col-md-auto" style="max-width: 450px;">
+        <h6>ACKNOWLEDGEMENTS</h6>
+        <small>
+          <p class="tight mb-2">
+            This service forms part of the national Australian BioCommons infrastructure.
+          </p>
+          <p class="tight mb-2">
+            Galaxy Australia acknowledges operational and computational support from its
+            <a href="/about#operational-partners"> partner organisations</a>.
+          </p>
+          <p class="tight mb-2">
+            We acknowledge and pay respect to the Elders and Traditional Owners of the lands on which our partner organisations stand.
+          </p>
+        </small>
+      </div>
 
-          <div class="col-md-6">
-            <h6>CONNECT</h6>
-            <p>
-              <a href="mailto:help@genome.edu.au">
-                <i class="fas fa-envelope"></i>
-              </a>
+      <div class="col-md-auto">
+        <h6>CONNECT</h6>
+        <p>
+          <a href="mailto:help@genome.edu.au">
+            <i class="fas fa-envelope"></i>
+          </a>
 
-              <a href="https://github.com/usegalaxy-au" target="_blank">
-                <i class="fab fa-github"></i>
-              </a>
+          <a href="https://github.com/usegalaxy-au" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
 
-              <a href="https://twitter.com/galaxyaustralia" target="_blank">
-                <i class="fab fa-twitter"></i>
-              <a href="https://www.linkedin.com/products/australianbiocommons-galaxyaustralia/" target="_blank">
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </p>
-          </div>
-        </div>
+          <a href="https://twitter.com/galaxyaustralia" target="_blank">
+            <i class="fab fa-twitter"></i>
+          <a href="https://www.linkedin.com/products/australianbiocommons-galaxyaustralia/" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </p>
       </div>
     </div>
   </div>
