--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -38,7 +38,7 @@
 
       <div class="col-md-auto">
         <h6>SITE LINKS</h6>
-        <div class="row" id="footer-site-links">
+        <div class="row plain-links" id="footer-site-links">
           <div class="col-md-6">
             <small>
               <a href="/request">Support</a> <br>
@@ -77,7 +77,7 @@
 
       <div class="col-md-auto">
         <h6>CONNECT</h6>
-        <p>
+        <p class="plain-links">
           <a href="mailto:help@genome.edu.au">
             <i class="fas fa-envelope"></i>
           </a>
