Clean up diann form

--- a/webapp/home/templates/home/requests/access/cellranger.html
+++ b/webapp/home/templates/home/requests/access/cellranger.html
@@ -93,15 +93,7 @@
     </div>
 
     <div class="container mb-10">
-      <b>Privacy Collection Notice</b>: by completing this form you agree that your
-      responses will be provided to the Australian BioCommons and Galaxy
-      Australia and will be used solely for the purposes of determining
-      suitability for access to the Australian Cell Ranger Service. Your
-      responses will be protected against unauthorised access and use; providing
-      your name is required to enable any follow ups. For more information,
-      please see the
-      <a href="https://www.biocommons.org.au/privacy/">
-        BioCommons Privacy Statement</a>.
+      {% include 'home/request/access/snippets/privacy-collection-notice.html' %}
     </div>
 
     <div class="row mb-10">
