Fix bug when galaxy API fails

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -186,6 +186,12 @@ textarea.invalid {
   border-radius: .25rem;
   transition-duration: .25s;
 }
+.ga-btn:focus {
+  box-shadow: var(--color) 0 0 5px 2px;
+}
+.ga-btn:focus-visible {
+  outline: 0;
+}
 .ga-btn.sm {
   margin: .5rem;
   padding: .15rem .35rem;
