--- a/webapp/home/templates/home/requests/mail/access-request.html
+++ b/webapp/home/templates/home/requests/mail/access-request.html
@@ -13,12 +13,8 @@
   <em style="font-size: 16pt; color: firebrick;">
     &#128128; {{ failed_message }}
   </em>
-  <p>
-    Exception: <br>
-    <code style="background-color: #f0d5cc; color: #c43f1a; font-size: 12pt; padding: 8px; max-height: 600px; max-width: 80%; overflow: auto;">
-      {{ exception }}
-    </code>
-  </p>
+  <pre style="background-color: #f0d5cc; color: #c43f1a; font-size: 0.9rem; padding: .5rem; max-height: 300px; overflow: auto;">{{ exception }}</code>
+  </pre>
   {% else %}
   <h3>New {{ resource_name }} access request submitted - Galaxy Australia</h3>
   <em style="font-size: 16pt; color: forestgreen;">
