--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -60,7 +60,7 @@ Australian BioCommons (hosted by
 <div class="container logo">
     <div class="text-center">
       <a href="https://www.biocommons.org.au" target="_blank">
-        <img src="{% static 'logos/footer/au-biocommons' %}" />
+        <img src="{% static 'logos/footer/au-biocommons.png' %}" />
       </a>
       <a href="https://www.unimelb.edu.au" target="_blank">
         <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
