Typo in about.html
Underpined -> Underpinned

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -81,7 +81,7 @@ Australian BioCommons (hosted by
 </h3>
 
 <p>
-Galaxy Australia is underpined by computational resources provided by
+Galaxy Australia is underpinned by computational resources provided by
   <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>,
   <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>,
   <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
