--- a/deploy/ansible/roles/galaxy_media_site/templates/setup.sh.j2
+++ b/deploy/ansible/roles/galaxy_media_site/templates/setup.sh.j2
@@ -1,9 +1,9 @@
-# Set up webapp and restart web services
+# Set up gms and restart web services
 
 set -e
 
 source {{ venv_root }}/bin/activate
-cd {{ project_root }}/webapp
+cd {{ django_root }}
 
 # Set Django settings
 export DJANGO_SETTINGS_MODULE=webapp.settings.prod
@@ -18,6 +18,6 @@ python manage.py migrate
 
 # Restart services
 sudo systemctl daemon-reload
-sudo systemctl enable webapp.service
-sudo systemctl enable webapp.socket
-sudo service webapp restart
+sudo systemctl enable gms.service
+sudo systemctl enable gms.socket
+sudo service gms restart
