--- a/deploy/ansible/roles/galaxy_media_site/templates/update.sh.j2
+++ b/deploy/ansible/roles/galaxy_media_site/templates/update.sh.j2
@@ -28,7 +28,7 @@ sudo chown -R www-data:www-data webapp/logs
 sudo chown -R www-data:www-data webapp/media
 
 # Restart the GMS web service
-sudo service webapp restart
+sudo service gms restart
 
 echo ""
 echo "~~~ Restarted Galaxy Media Site ~~~"
