--- a/deploy/ansible/roles/galaxy_media_site/templates/gms.service.j2
+++ b/deploy/ansible/roles/galaxy_media_site/templates/gms.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=Gunicorn for Galaxy Media Site
-Requires=webapp.socket
+Requires=gms.socket
 After=network.target
 
 [Service]
@@ -9,9 +9,9 @@ User = www-data
 Group = www-data
 RuntimeDirectory=gunicorn
 WorkingDirectory={{ django_root }}
-Environment="PATH={{ venv_root }}/.venv/bin:$PATH"
+Environment="PATH={{ venv_root }}/bin:$PATH"
 ExecStart={{ venv_root }}/bin/gunicorn --pid /run/gunicorn/pid   \
-          --bind unix:/run/webapp.sock       \
+          --bind unix:/run/gms.sock       \
           -c {{ server_root }}/gunicorn.py webapp.wsgi
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
