--- a/deploy/ansible/roles/galaxy_media_site/templates/nginx.vhost.j2
+++ b/deploy/ansible/roles/galaxy_media_site/templates/nginx.vhost.j2
@@ -46,4 +46,26 @@ server {
         client_max_body_size  1000m;
     }
 
+    {% if ssl_cert_exists %}
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/gms.neoformit.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/gms.neoformit.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    {% endif %}
+
 }
+
+{% if ssl_cert_exists %}
+server {
+
+    if ($host = gms.neoformit.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80;
+    server_name  gms.neoformit.com;
+    return 404; # managed by Certbot
+
+}
+{% endif %}
