update.sh run manage.py migrate as root

--- a/deploy/ansible/roles/galaxy_media_site/templates/update.sh.j2
+++ b/deploy/ansible/roles/galaxy_media_site/templates/update.sh.j2
@@ -21,7 +21,7 @@ cd {{ django_root }}
 python manage.py collectstatic --noinput
 
 # Migrate the database (if necessary)
-sudo -u www-data python manage.py migrate
+python manage.py migrate
 
 # Update file ownership to allow www-data to write logs/media
 chown -R www-data:www-data webapp/logs
