--- a/webapp/home/templates/home/requests/access/index.html
+++ b/webapp/home/templates/home/requests/access/index.html
@@ -81,6 +81,20 @@
           </a>
         </div>
       </div>
+
+      <div class="card">
+        <div class="card-body">
+          <p class="my-0">
+            Analyse data-independent acquisition (DIA) proteomics data with DiaNN
+          </p>
+        </div>
+
+        <div class="card-footer">
+          <a class="ga-btn" href="/request/access/diann">
+            Apply now
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </main>
