Don't disable "agree" button on mac

--- a/webapp/home/templates/home/requests/access/snippets/agree-terms-modal.html
+++ b/webapp/home/templates/home/requests/access/snippets/agree-terms-modal.html
@@ -76,6 +76,8 @@
       .css('padding', '1rem'));
     {% endif %}
 
+    const isMac = () => navigator.platform.toUpperCase().indexOf('MAC') >= 0;
+
     function agreeTermsAction(el) {
       enableTermsInput();
       $('#agreeTermsInput').attr('checked', true);
@@ -92,16 +94,20 @@
       tooltip.disable();
     }
 
+
     function setEventHandler() {
       const termsContainer = $('#termsModal iframe').contents().find('body');
       if (!termsContainer.length) {
         return setTimeout(setEventHandler, 100);
       }
+      if (isMac()) {
+        return enableAgreeTermsButton();
+      }
       $('#termsModal iframe').contents().on('scroll', (event) => {
         const scrollFromEnd = $(termsContainer)[0].scrollHeight
         - $('#termsModal iframe').contents().scrollTop()
         - $('#termsModal iframe').height();
-        if (scrollFromEnd < 50) enableAgreeTermsButton();
+        scrollFromEnd < 50 && enableAgreeTermsButton();
       });
       termsContainer.css('margin', 'auto');
     }
