--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -70,7 +70,8 @@
         <h1 class="ga-blue"><span class="material-icons">key</span></h1>
         <div class="card-body">
           <p>
-            Request access to specialised tools AlphaFold 2, FGENESH++ and Cell Ranger
+            Request access to specialised tools AlphaFold 2, FGENESH++,
+            Cell Ranger and more...
           </p>
         </div>
 
