Update quota form

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -137,6 +137,9 @@ section {
   margin-left: 0;
   margin-right: 0;
 }
+.narrow {
+  max-width: 600px;
+}
 .container-centered {
   /*
   For content centered on full
