--- a/webapp/home/templates/home/requests/quota.html
+++ b/webapp/home/templates/home/requests/quota.html
@@ -176,7 +176,7 @@
     <div class="row mb-10">
       <div class="col">
         <label for="descriptionInput" class="form-label">
-          Justification and comments
+          Justification for quota increase
         </label>
         {{ form.description.errors }}
         <textarea class="form-control" id="descriptionInput"
