Linear about page

--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -152,6 +152,10 @@ section {
   width: 100%;
   height: 85vh;
 }
+.my-10 {
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+}
 
 /* Forms */
 input.invalid,
