--- a/webapp/home/static/home/css/about.css
+++ b/webapp/home/static/home/css/about.css
@@ -11,45 +11,13 @@ hr {
 main {
   margin-bottom: 10rem;
 }
-
-.about-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 3rem;
-  padding: 1rem;
-  border-bottom: 1px solid #eee;
-}
-.about-nav button {
-  display: inline-block;
-  color: #aaa;
-  font-size: 1rem;
-  text-decoration: none;
-  margin: .5rem;
-  padding: .25rem 1rem;
-  min-width: 150px;
-  text-align: center;
-  background: transparent;
-  border: none;
-  border-radius: .25rem;
-  transition-duration: .25s;
-  cursor: pointer;
-}
-.about-nav button.active {
-  color: #eee;
-  background: var(--color);
-  cursor: default;
-}
-.about-nav button:not(.active):hover {
-  color: #999;
-  background: rgba(50,50,50,0.1);
-}
 section {
-  display: none;
+  margin-top: 6rem;
+  padding-bottom: 3rem;
+  border-bottom: 1px solid #aaa;
 }
-section.show {
-  display: block;
+section:last-child {
+  border-bottom: none;
 }
 .textbox {
   margin: 4rem;
@@ -68,25 +36,11 @@ ol.nested ol ol > li {
 
 /* Responsive */
 @media (max-width: 1200px) {
-  .about-nav {
-    padding: 1rem;
-  }
-  .about-nav button {
-    font-size: 0.85rem;
-    margin: .25rem;
-    padding: .25rem;
-    min-width: 125px;
-  }
   .textbox {
     margin: 2rem;
   }
 }
 @media (max-width: 880px) {
-  .about-nav button {
-    margin: .25rem;
-    padding: .25rem;
-    min-width: 0px;
-  }
   .textbox {
     margin: 1rem;
   }
