--- a/webapp/home/templates/home/about.html
+++ b/webapp/home/templates/home/about.html
@@ -10,35 +10,54 @@
 
 {% block content %}
 
-<div class="about-nav">
-  <button class="active" type="button" name="about" onclick="selectPage('about')">
-    About
-  </button>
-
-  <button type="button" name="feature-catalogue" onclick="selectPage('feature-catalogue')">
-    Feature catalogue
-  </button>
-
-  <button type="button" name="terms-of-service" onclick="selectPage('terms-of-service')">
-    Terms of service
-  </button>
-
-  <button type="button" name="data-privacy" onclick="selectPage('data-privacy')">
-    Data privacy
-  </button>
-
-  <button type="button" name="acceptable-use" onclick="selectPage('acceptable-use')">
-    Acceptable use
-  </button>
-
-  <button type="button" name="service-levels" onclick="selectPage('service-levels')">
-    Service levels
-  </button>
-</div>
-
 <main>
   <div class="container">
-    <section id="about" class="show">
+
+    <h1> About Galaxy Australia </h1>
+
+    <p class="lead">
+      Galaxy Australia provides researchers with free access to a high-performance computing network through a simple web interface.
+    </p>
+
+    <p>
+      Galaxy Australia maintains tools, workflows and reference datasets as requested by the Australian research community, making the platform the ideal place for Australian researchers to perform their analyses. If we do not currently support your specific application or species then we will endeavour to make it available.
+      <a href="/request">Please just ask!</a>
+    </p>
+
+    <p>
+      Galaxy Australia is part of the usegalaxy.* initiative. Visit the
+      <a href="https://galaxyproject.org/usegalaxy/" target="_blank">Galaxy Project Community Hub</a>
+      for more information.
+    </p>
+
+    <div class="my-5">
+      <p class="lead">On this page</p>
+      <ol>
+        <li>
+          <a href="#about">Citing Galaxy Australia</a>
+        </li>
+        <li>
+          <a href="#operational-partners">Our funding and partners</a>
+        </li>
+        <li>
+          <a href="#feature-catalogue">Feature catalogue</a>
+        </li>
+        <li>
+          <a href="#terms-of-service">Terms of service</a>
+        </li>
+        <li>
+          <a href="#data-privacy">Data privacy</a>
+        </li>
+        <li>
+          <a href="#acceptable-use">Acceptable use</a>
+        </li>
+        <li>
+          <a href="#service-levels">Service levels</a>
+        </li>
+      </ol>
+    </div>
+
+    <section id="about">
       {% include 'home/snippets/about/about.html' %}
     </section>
 
@@ -67,85 +86,8 @@
 
 
 {% block script %}
-
-<script type="text/javascript">
-
-  function selectPage(id) {
-    // Select a <section> to display
-    $('section').removeClass('show');
-    $(`#${id}`).addClass('show');
-    $('.about-nav button').removeClass('active');
-    $(`.about-nav button[name="${id}"]`).addClass('active');
-    history.pushState({}, '', `#${id}`);
-  }
-
-  function tryScrollTop() {
-    // Scroll to top only if not already there
-    if (document.documentElement.scrollTop || document.body.scrollTop) {
-      console.log("tryScrollTop scrolling to top");
-      window.scrollTo({
-        top: 0,
-        left: 0,
-        behavior: 'instant',
-      });
-    }
-  }
-
-  function scrollToId(id) {
-    console.log(`scrollToId('${id}')`);
-    const el = $(`#${id}`);
-
-    // Check if id matches an element
-    if (!el) {
-      console.log(`No element matching #${id}`);
-      return
-    }
-    // Check if element is section
-    if (el.prop('tagName').toLowerCase() === 'section') {
-      console.log(`#${id} matches a section`);
-      tryScrollTop();
-      return selectPage(id);
-    }
-    // Check if element has a parent section that should be shown
-    const section = el.closest('section');
-    if (section) {
-      console.log(`Found parent section #${section.prop('id')} for element #${id}`);
-      tryScrollTop();
-      selectPage(section.prop('id'));
-    }
-    // Scroll to element
-    $([document.documentElement, document.body]).animate({
-        scrollTop: el.offset().top - 100
-    }, 1000);
-    history.pushState({}, '', `#${id}`);
-  }
-</script>
-
 {% endblock %}
 
 
 {% block onload %}
-
-// Prevent default hash scroll
-if (location.hash) {
-  console.log("Set timeout to intercept hash scroll");
-  setTimeout(function() {
-    window.scrollTo(0, 0);
-  }, 10);
-}
-
-window.location.hash && setTimeout(function() {
-  scrollToId(window.location.hash.slice(1));
-}, 100);
-
-$('a').click( e => {
-  if (
-  e.target.href.startsWith(window.location.origin)
-  && e.target.href.includes('#')) {
-    // It's an internal link
-    e.preventDefault();
-    scrollToId(e.target.href.split('#')[1]);
-  }
-})
-
 {% endblock %}
